--- a/Bay, Luc/.classpath
+++ b/Bay, Luc/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="DSStuff"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="src" path="Intro Stuff"/>
 	<classpathentry exported="true" kind="lib" path="Libs/core.jar"/>
 	<classpathentry exported="true" kind="lib" path="Libs/finch.jar"/>
 	<classpathentry exported="true" kind="lib" path="Libs/jnaerator-0.9.5.jar"/>
